manifests/07_deploy_kazakhverb_suggest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kazakhverb-suggest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kazakhverb-suggest
  template:
    metadata:
      labels:
        app: kazakhverb-suggest
    spec:
      volumes:
        - name: suggest-data
          persistentVolumeClaim:
            claimName: kazakhverb-volume-claim
      containers:
        - name: kazakhverb-suggest
          image: cr.yandex/crp33sksvqbe0tmf8sj2/kazakhverb/suggest:v1
          volumeMounts:
            - name: suggest-data
              mountPath: /data
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: cr-yandex-creds
