manifests/11_deploy_kazakhverb_kiltman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kazakhverb-kiltman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kazakhverb-kiltman
  template:
    metadata:
      labels:
        app: kazakhverb-kiltman
    spec:
      volumes:
        - name: kiltman-data
          persistentVolumeClaim:
            claimName: kazakhverb-volume-claim
      containers:
        - name: kazakhverb-kiltman
          image: cr.yandex/crp33sksvqbe0tmf8sj2/kazakhverb/kiltman:v1
          volumeMounts:
            - name: kiltman-data
              mountPath: /data
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: cr-yandex-creds
