manifests/14_deploy_kazakhverb_un.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kazakhverb-un
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kazakhverb-un
  template:
    metadata:
      labels:
        app: kazakhverb-un
    spec:
      volumes:
        - name: un-data
          persistentVolumeClaim:
            claimName: kazakhverb-volume-claim
        - name: secret-volume
          secret:
            secretName: yc-speechkit-creds
      containers:
        - name: kazakhverb-un
          image: cr.yandex/crp33sksvqbe0tmf8sj2/kazakhverb/un:v1
          volumeMounts:
            - name: un-data
              mountPath: "/data"
            - name: secret-volume
              readOnly: true
              mountPath: "/etc/secret-volume"
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: cr-yandex-creds
