manifests/20_deploy_kazakhverb_gymapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kazakhverb-gymapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kazakhverb-gymapi
  template:
    metadata:
      labels:
        app: kazakhverb-gymapi
    spec:
      containers:
        - name: kazakhverb-gymapi
          image: cr.yandex/crp33sksvqbe0tmf8sj2/kazakhverb/gymapi:v1
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: cr-yandex-creds
