manifests/02_svc_kazakhverb_static_website.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-static-website
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-static-website
