manifests/08_svc_kazakhverb_suggest.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-suggest
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-suggest
