manifests/12_svc_kazakhverb_kiltman.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-kiltman
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-kiltman
