manifests/15_svc_kazakhverb_un.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-un
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-un
