manifests/18_svc_kazakhverb_gc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-gc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-gc
