manifests/21_svc_kazakhverb_gymapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: kazakhverb-gymapi
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: kazakhverb-gymapi
