manifests/23_svc_kazakhverb_qarauapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: qarauapi-external
spec:
  type: ExternalName
  externalName: qarau.khairulin.com
