manifests/03_ing_kazakhverb_static_website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kazakhverb-static-website
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - kazakhverb.khairulin.com
      secretName: kazakhverb-tls
  rules:
  - host: kazakhverb.khairulin.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kazakhverb-static-website
            port:
              number: 80
