manifests/13_ing_kazakhverb_kiltman.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kazakhverb-kiltman-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - kazakhverb.khairulin.com
      secretName: kazakhverb-tls
  rules:
  - host: kazakhverb.khairulin.com
    http:
      - path: /analyze_sub
        pathType: Prefix
        backend:
          service:
            name: kazakhverb-kiltman
            port:
              number: 80
      paths:
      - path: /analyze
        pathType: Prefix
        backend:
          service:
            name: kazakhverb-kiltman
            port:
              number: 80
      - path: /detect
        pathType: Prefix
        backend:
          service:
            name: kazakhverb-kiltman
            port:
              number: 80
