manifests/22_ing_kazakhverb_gymapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kazakhverb-gymapi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header 'Access-Control-Allow-Origin' '*' always;
spec:
  tls:
    - hosts:
      - kazakhverb.khairulin.com
      secretName: kazakhverb-tls
  rules:
  - host: kazakhverb.khairulin.com
    http:
      paths:
      - path: /gymapi
        pathType: Prefix
        backend:
          service:
            name: kazakhverb-gymapi
            port:
              number: 80
